import React from 'react';
import { render } from '@testing-library/react';
import configureStore from 'redux-mock-store';
import { Provider } from 'react-redux';

import ConnectedEntriesCollection, {
  EntriesCollection,
  filterNestedEntries,
} from '../EntriesCollection';

jest.mock('../Entries', () => 'mock-entries');

const middlewares = [];
const mockStore = configureStore(middlewares);

function createMockStore(collection, entriesArray, additionalState = {}) {
  return mockStore({
    entries: toEntriesState(collection, entriesArray),
    cursors: {},
    config: { publish_mode: 'simple' },
    collections: { [collection.name]: collection },
    editorialWorkflow: {
      pages: { ids: [] },
    },
    ...additionalState,
  });
}

function renderWithRedux(component, { store } = {}) {
  function Wrapper({ children }) {
    return <Provider store={store}>{children}</Provider>;
  }

  return render(component, { wrapper: Wrapper });
}

function toEntriesState(collection, entriesArray) {
  const entries = entriesArray.reduce(
    (acc, entry) => {
      acc.entities[`${collection.name}.${entry.slug}`] = entry;
      acc.pages[collection.name].ids.push(entry.slug);
      return acc;
    },
    { pages: { [collection.name]: { ids: [] } }, entities: {} },
  );
  return entries;
}

describe('filterNestedEntries', () => {
  it('should return only immediate children for non root path', () => {
    const entriesArray = [
      { slug: 'index', path: 'src/pages/index.md', data: { title: 'Root' } },
      { slug: 'dir1/index', path: 'src/pages/dir1/index.md', data: { title: 'File 1' } },
      { slug: 'dir1/dir2/index', path: 'src/pages/dir1/dir2/index.md', data: { title: 'File 2' } },
      { slug: 'dir3/index', path: 'src/pages/dir3/index.md', data: { title: 'File 3' } },
      { slug: 'dir3/dir4/index', path: 'src/pages/dir3/dir4/index.md', data: { title: 'File 4' } },
    ];
    const entries = entriesArray;
    expect(filterNestedEntries('dir3', 'src/pages', entries)).toEqual([
      { slug: 'dir3/index', path: 'src/pages/dir3/index.md', data: { title: 'File 3' } },
    ]);
  });

  it('should return only immediate children for root path', () => {
    const entriesArray = [
      { slug: 'index', path: 'src/pages/index.md', data: { title: 'Root' } },
      { slug: 'dir1/index', path: 'src/pages/dir1/index.md', data: { title: 'File 1' } },
      { slug: 'dir1/dir2/index', path: 'src/pages/dir1/dir2/index.md', data: { title: 'File 2' } },
      { slug: 'dir3/index', path: 'src/pages/dir3/index.md', data: { title: 'File 3' } },
      { slug: 'dir3/dir4/index', path: 'src/pages/dir3/dir4/index.md', data: { title: 'File 4' } },
    ];
    const entries = entriesArray;
    expect(filterNestedEntries('', 'src/pages', entries)).toEqual([
      { slug: 'index', path: 'src/pages/index.md', data: { title: 'Root' } },
    ]);
  });
});

describe('EntriesCollection', () => {
  const collection = { name: 'pages', label: 'Pages', folder: 'src/pages' };
  const props = {
    t: jest.fn(),
    loadEntries: jest.fn(),
    traverseCollectionCursor: jest.fn(),
    loadUnpublishedEntries: jest.fn(),
    isFetching: false,
    cursor: {},
    collection,
    collections: { pages: collection },
    entriesLoaded: true,
    unpublishedEntriesLoaded: true,
    isEditorialWorkflowEnabled: false,
    getWorkflowStatus: jest.fn(),
    getUnpublishedEntries: jest.fn(() => []),
  };

  it('should render with entries', () => {
    const entries = [{ slug: 'index' }];
    const { asFragment } = render(<EntriesCollection {...props} entries={entries} />);

    expect(asFragment()).toMatchSnapshot();
  });

  it('should render connected component', () => {
    const entriesArray = [
      { slug: 'index', path: 'src/pages/index.md', data: { title: 'Root' } },
      { slug: 'dir1/index', path: 'src/pages/dir1/index.md', data: { title: 'File 1' } },
      { slug: 'dir2/index', path: 'src/pages/dir2/index.md', data: { title: 'File 2' } },
    ];

    const store = createMockStore(collection, entriesArray);

    const { asFragment } = renderWithRedux(<ConnectedEntriesCollection collection={collection} />, {
      store,
    });

    expect(asFragment()).toMatchSnapshot();
  });

  it('should render show only immediate children for nested collection', () => {
    const entriesArray = [
      { slug: 'index', path: 'src/pages/index.md', data: { title: 'Root' } },
      { slug: 'dir1/index', path: 'src/pages/dir1/index.md', data: { title: 'File 1' } },
      { slug: 'dir1/dir2/index', path: 'src/pages/dir1/dir2/index.md', data: { title: 'File 2' } },
      { slug: 'dir3/index', path: 'src/pages/dir3/index.md', data: { title: 'File 3' } },
      { slug: 'dir3/dir4/index', path: 'src/pages/dir3/dir4/index.md', data: { title: 'File 4' } },
    ];

    const store = createMockStore(collection, entriesArray);

    const { asFragment } = renderWithRedux(
      <ConnectedEntriesCollection
        collection={{ ...collection, nested: { depth: 10, subfolders: false } }}
      />,
      { store },
    );

    expect(asFragment()).toMatchSnapshot();
  });

  it('should render with applied filter term for nested collections', () => {
    const entriesArray = [
      { slug: 'index', path: 'src/pages/index.md', data: { title: 'Root' } },
      { slug: 'dir1/index', path: 'src/pages/dir1/index.md', data: { title: 'File 1' } },
      { slug: 'dir1/dir2/index', path: 'src/pages/dir1/dir2/index.md', data: { title: 'File 2' } },
      { slug: 'dir3/index', path: 'src/pages/dir3/index.md', data: { title: 'File 3' } },
      { slug: 'dir3/dir4/index', path: 'src/pages/dir3/dir4/index.md', data: { title: 'File 4' } },
    ];

    const store = createMockStore(collection, entriesArray);

    const { asFragment } = renderWithRedux(
      <ConnectedEntriesCollection
        collection={{ ...collection, nested: { depth: 10, subfolders: false } }}
        filterTerm="dir3/dir4"
      />,
      { store },
    );

    expect(asFragment()).toMatchSnapshot();
  });
});
